--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
 [dependencies]
 failure = "0.1.5"
 log = "0.4.6"
 simple_logger = "1.3.0"
+wasm-bindgen = "0.2.47"
