--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
 name = "chen_lang"
 version = "0.1.0"
-authors = ["zuisong <378818573@qq.com>"]
+authors = [ "zuisong <378818573@qq.com>" ]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 
 [dependencies]
 failure = "0.1.5"
@@ -13,3 +10,6 @@ log = "0.4.6"
 simple_logger = "1.3.0"
 wasm-bindgen = "0.2.47"
 clap = "2.33.0"
+
+[lib]
+#crate-type = [ "cdylib" ]
