--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2018"
 
 [dependencies]
 failure = "0.1.5"
-log = "0.4.7"
+log = "0.4.8"
 simple_logger = "1.3.0"
 clap = "2.33.0"
+quickcheck = "0.9.0"
 
 [lib]
 #crate-type = [ "cdylib" ]
