--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,8 @@ authors = [ "zuisong <378818573@qq.com>" ]
 edition = "2018"
 
 [dependencies]
-failure = "0.1.6"
 log = "0.4.8"
-simple_logger = "1.3.0"
+simple_logger = "1.6.0"
 clap = "2.33.0"
-quickcheck = "0.9.0"
-
-[lib]
-#crate-type = [ "cdylib" ]
+quickcheck = "0.9.2"
+anyhow = "1.0.28"
