Imported from https://zuisong@github.com/zuisong/chen_lang.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = A super tiny and toy language write by rust
+[access "refs/*"]
+	owner = group user/zuisong
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/zuisong
+	label-Verified = -1..+1 group user/zuisong
+	push = group user/zuisong
+	read = group user/zuisong
+	rebase = group user/zuisong
+	removeReviewer = group user/zuisong
+	submit = group user/zuisong
+[access "refs/heads/*"]
+	create = group user/zuisong
+	push = +force group user/zuisong
+	pushMerge = group user/zuisong
+	read = group user/zuisong
+[access "refs/tags/*"]
+	push = group user/zuisong
+	push = +force group user/zuisong
