--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ authors = [ "zuisong <378818573@qq.com>" ]
 edition = "2018"
 
 [dependencies]
-log = "0.4.11"
+log = "0.4.13"
 simple_logger = "1.11.0"
 clap = "2.33.3"
-quickcheck = "0.9.2"
-anyhow = "1.0.37"
+quickcheck = "1.0.3"
+anyhow = "1.0.38"
+thiserror = "1.0.23"
+
