--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,12 +4,11 @@ on: [ push ]
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macOS-latest ]
         rust: [ nightly ]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v1
       - uses: hecrj/setup-rust-action@v1
