单个数值也可以作为表达式

--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 # 代码统一编码为 utf-8
 charset                                             = utf-8
 # 换行符为crlf
-end_of_line                                         = crlf
+end_of_line                                         = lf
 # 默认缩进 4
 indent_size                                         = 4
 # 默认缩进方式使用空格
