--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "chen_lang"
 version = "0.1.0"
 authors = ["zuisong <378818573@qq.com>"]
 edition = "2021"
+resolver = "2"
 
 [dependencies]
 log = "0.4.14"
