--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,11 @@ edition = "2021"
 
 [dependencies]
 log = "0.4.17"
-simple_logger = "4.1.0"
-clap = "4.2.1"
-quickcheck = "1.0.3"
+clap = "4.2.3"
 anyhow = "1.0.70"
 thiserror = "1.0.40"
 clap_complete = "4.2.0"
-
-[dev-dependencies]
-quickcheck = "1.0.3"
+env_logger = "0.10.0"
 
 [[bin]]
 name = "chen_lang"
