--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,1 +1,5 @@
 unstable_features = true
+reorder_imports = true
+group_imports = "StdExternalCrate"
+trailing_comma = "Vertical"
+trailing_semicolon = true
