--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,14 @@ version = "0.1.0"
 
 [dependencies]
 anyhow = "1.0.75"
-clap = { version = "4.4.0", optional = true }
+clap = { version = "4.4.1", optional = true, features = ["derive"] }
 clap_complete = { version = "4.4.0", optional = true }
 env_logger = "0.10.0"
 log = "0.4.20"
-pretty_assertions = "1.4.0"
 thiserror = "1.0.47"
+
+[dev-dependencies]
+pretty_assertions = "1.4.0"
 
 [[bin]]
 name = "chen_lang"
