--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ description = "A tiny programming language written in rust"
 anyhow = "1.0.75"
 clap = { version = "4.4.2", optional = true, features = ["derive"] }
 clap_complete = { version = "4.4.1", optional = true }
-env_logger = "0.10.0"
-log = "0.4.20"
 thiserror = "1.0.48"
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
