--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ version = "0.1.0"
 description = "A tiny programming language written in rust"
 [dependencies]
 anyhow = "1.0.75"
-clap = { version = "4.4.6", optional = true, features = ["derive"] }
-clap_complete = { version = "4.4.3", optional = true }
+clap = { version = "4.4.11", optional = true, features = ["derive"] }
+clap_complete = { version = "4.4.4", optional = true }
+nom = "7.1.3"
 thiserror = "1.0.50"
 tracing = "0.1.40"
-tracing-subscriber = "0.3.17"
+tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
