--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,13 @@ description = "A tiny programming language written in rust"
 anyhow = "1.0.75"
 clap = { version = "4.4.11", optional = true, features = ["derive"] }
 clap_complete = { version = "4.4.4", optional = true }
-nom = "7.1.3"
 thiserror = "1.0.50"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+winnow = "0.5.28"
 
 [dev-dependencies]
-pretty_assertions = "1.4.0"
+pretty_assertions = { version = "1.4.0", features = ["unstable"] }
 
 [[bin]]
 name = "chen_lang"
