--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ tracing-subscriber = { version = "0.3", optional = true }
 wasm-bindgen = { version = "0.2", optional = true }
 clap = { version = "4", optional = true, features = ["derive"] }
 clap_complete = { version = "4", optional = true }
+pest = { version = "2.8.4" }
+pest_derive = "2.8.4"
 
 [dev-dependencies]
 assert_cmd = "2"
