feat: introduce a new parser and enhance the object system with metatable inheritance.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ crate-type = ["cdylib", "rlib"]
 [features]
 binaries = ["dep:clap", "dep:clap_complete", "dep:tracing-subscriber"]
 wasm = ["dep:wasm-bindgen"]
+pest-parser = ["dep:pest", "dep:pest_derive"]
 default = ["binaries", "wasm"]
 
 [dependencies]
@@ -26,8 +27,8 @@ tracing-subscriber = { version = "0.3", optional = true }
 wasm-bindgen = { version = "0.2", optional = true }
 clap = { version = "4", optional = true, features = ["derive"] }
 clap_complete = { version = "4", optional = true }
-pest = { version = "2.8.4" }
-pest_derive = "2.8.4"
+pest = { version = "2.8.4", optional = true }
+pest_derive = { version = "2.8.4", optional = true }
 
 [dev-dependencies]
 assert_cmd = "2"
