--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ clap_complete = { version = "4", optional = true }
 pest = { version = "2.8.4", optional = true }
 pest_derive = { version = "2.8.4", optional = true }
 indexmap = "2.12.1"
-jiff = "0.2"
+jiff = { version = "0.2", features = ["js"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
