--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ indexmap = "2.12.1"
 jiff = { version = "0.2", features = ["js"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+anyhow = { version = "1.0.100" }
 
 [dev-dependencies]
 assert_cmd = "2"
@@ -41,9 +42,9 @@ pretty_assertions = { version = "1", features = ["unstable"] }
 tempfile = "3"
 
 
-[profile.release]
-strip = true      # Automatically strip symbols from the binary.
-opt-level = "z"   # Optimize for size.
-lto = true
-codegen-units = 1
-panic = "abort"
+#[profile.release]
+#strip = true      # Automatically strip symbols from the binary.
+#opt-level = "z"   # Optimize for size.
+#lto = true
+#codegen-units = 1
+#panic = "abort"
