--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ jiff = { version = "0.2", features = ["js"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 anyhow = { version = "1.0.100" }
+codespan-reporting = { version = "0.13.1",default-features = false , features = ["std"]}
 
 [dev-dependencies]
 assert_cmd = "2"
