--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ winnow = "0.7"
 tracing = { version = "0.1" }
 tracing-subscriber = { version = "0.3", optional = true }
 wasm-bindgen = { version = "0.2", optional = true }
-clap = { version = "4", optional = true, features = ["derive"] }
+clap = { version = "4", optional = true, default-features = false, features = ["derive", "help", "suggestions"] }
 clap_complete = { version = "4", optional = true }
 pest = { version = "2.8.4", optional = true }
 pest_derive = { version = "2.8.4", optional = true }
@@ -35,6 +35,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 anyhow = { version = "1.0.100" }
 codespan-reporting = { version = "0.13.1",default-features = false , features = ["std"]}
+rust_decimal = "1.39.0"
 
 [dev-dependencies]
 assert_cmd = "2"
