--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 anyhow = { version = "1.0.100" }
 codespan-reporting = { version = "0.13.1",default-features = false , features = ["std"]}
-rust_decimal = "1.39.0"
+rust_decimal = { version = "1.39.0", features = ["serde-float"] }
 
 [dev-dependencies]
 assert_cmd = "2"
