feat: Make winnow tokenizer an optional feature and correct its parsing of `#{` and `}` tokens.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,13 @@ crate-type = ["cdylib", "rlib"]
 binaries = ["dep:clap", "dep:clap_complete", "dep:tracing-subscriber"]
 wasm = ["dep:wasm-bindgen"]
 pest-parser = ["dep:pest", "dep:pest_derive"]
-default = ["binaries", "wasm"]
+default = ["binaries", "wasm", "winnow-tokenizer"]
+winnow-tokenizer = ["dep:winnow"]
 
 
 [dependencies]
 thiserror = "2"
-winnow = "0.7"
+winnow = { version = "0.7",optional = true }
 tracing = { version = "0.1" }
 tracing-subscriber = { version = "0.3", optional = true }
 wasm-bindgen = { version = "0.2", optional = true }
