feat: Add native process execution, file system operations, and HTTP client capabilities while removing the async/await design document.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,10 @@ crate-type = ["cdylib", "rlib"]
 binaries = ["dep:clap", "dep:clap_complete", "dep:tracing-subscriber"]
 wasm = ["dep:wasm-bindgen"]
 pest-parser = ["dep:pest", "dep:pest_derive"]
-default = ["binaries", "wasm", "winnow-tokenizer"]
+http = ["dep:reqwest"]  # HTTP 客户端（支持 WASM）
+default = ["binaries", "wasm", "winnow-tokenizer", "http"]
 winnow-tokenizer = ["dep:winnow"]
+
 
 
 [dependencies]
@@ -38,6 +40,12 @@ serde_json = "1.0"
 anyhow = { version = "1.0.100" }
 codespan-reporting = { version = "0.13.1",default-features = false , features = ["std"]}
 rust_decimal = { version = "1.39.0", features = ["serde-float", "macros"] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+reqwest = { version = "0.12", features = ["json"], optional = true }
 
 [dev-dependencies]
 assert_cmd = "2"
