--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,13 +40,16 @@ serde_json = "1.0"
 anyhow = { version = "1.0.100" }
 codespan-reporting = { version = "0.13.1",default-features = false , features = ["std"]}
 rust_decimal = { version = "1.39.0", features = ["serde-float", "macros"] }
-tokio = { version = "1.48.0", features = ["full"] }
+tokio = { version = "1.48.0", default-features = false, features = ["sync", "macros", "rt", "time", "io-util"] }
+reqwest = { version = "0.13", features = ["json"], optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-reqwest = { version = "0.13", features = ["json", "blocking"], optional = true }
+tokio = { version = "1.48.0", features = ["full"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 reqwest = { version = "0.13", features = ["json"], optional = true }
+wasm-bindgen-futures = "0.4"
+getrandom = { version = "0.2", features = ["js"] }
 
 [dev-dependencies]
 assert_cmd = "2"
